test/fixtures/config/theming/error/noCompletionType/.gulp.js
module.exports = {
  log: {
    msgs: {
      error: {
        noCompletionType: 'NO COMPLETION TYPE',
      },
    },
  },
};
